@@ -39,11 +39,7 @@ def task_Calc_Unstat_Order_Cash(target_date):
             continue
         
         xlmm = xlmms[0]
-        agency_levels = AgencyLevel.objects.filter(id=xlmm.agencylevel)
-        if agency_levels.count() == 0:
-            continue
-        agency_level = agency_levels[0]
-        rebeta_rate  = agency_level.get_Rebeta_Rate()
+        rebeta_rate = xlmm.get_Mama_Order_Rebeta_Rate()
         order_rebeta = mm_stat.wxorderamount * rebeta_rate
         if order_rebeta <= 0:
             continue
@@ -85,11 +81,7 @@ def task_Push_Rebeta_To_MamaCash(target_date):
             continue
         
         xlmm = xlmms[0]
-        agency_levels = AgencyLevel.objects.filter(id=xlmm.agencylevel)
-        if agency_levels.count() == 0:
-            continue
-        agency_level = agency_levels[0]
-        rebeta_rate  = agency_level.get_Rebeta_Rate()
+        rebeta_rate = xlmm.get_Mama_Order_Rebeta_Rate()
         order_rebeta = mm_stat.todayamountcount * rebeta_rate
         if order_rebeta <= 0:
             continue
