@@ -38,14 +38,18 @@
             data = id;
 
             var bt_verify = $('#'+index);
+            if (bt_verify.hasClass('loading')){
+            	return;
+            }
+            bt_verify.addClass('loading');
             function callback(result) {
+            	bt_verify.removeClass('loading');
                 if (result == "reject") {
                     alert('提现超过可用金额');
                 }
                 else if (result == "ok") {
                     bt_verify.text('已审核');
                     bt_verify.attr("disabled","disabled");
-
                 }
                 else {
                     alert("server error");
