@@ -39,7 +39,7 @@
   <ul class="list-group">
     <li class="list-group-item">手机号: {{ mobile }}</li>
     <li class="list-group-item">小鹿妈妈: {{ xlmm.weikefu }}</li>
-    {% if agencylevel.pk > 1 %}
+    {% if xlmm.agencylevel > 1 %}
         <li class="list-group-item"><p style="color:orange">账户现金(含押金): ￥<span style="font-size:26px">{{ xlmm.cash_money }}</span><a href="/m/cashout/" class="btn btn-warning" style="float:right;">提现</a></p></li>
     {% endif %}
     <li class="list-group-item">专属链接： <b>http://xiaolu.so/m/{{ pk }}/</b></li>
@@ -52,7 +52,7 @@
     {% endif %}
     <li class="list-group-item"><span style="color:orange">订单人数： {{ order_num }}</span></li>
     <li class="list-group-item"><span style="color:orange">订单金额： ￥{{ total_value }}</span></li>
-    {% if agencylevel.pk > 1 %}
+    {% if xlmm.agencylevel > 1 %}
     {% if carry > 0 %}
     <li class="list-group-item"><span style="color:orange">订单补贴： ￥{{ carry }}（待确认）</span></li>
     {% else %}
@@ -68,7 +68,8 @@
     </thead>
     <tbody>
       {% for order in order_list %}
-      <tr><td>{{ order.wxordernick }}</td><td>{{ order.order_cash }}</td><td>{{ order.shoptime|date:"H:i" }}</td><td>已付款</td></tr>
+      <tr><td>{{ order.wxordernick }}</td><td>{{ order.order_cash }}</td>
+      <td>{{ order.shoptime|date:"H:i" }}</td><td><span class="{% if order.status == 2 %}label label-danger{% endif %}">{{ order.status_name }}</span></td></tr>
       {% endfor %}
     </tbody>
   </table>
