@@ -227,6 +227,11 @@ SHOP_APP_SCHEDULE = {
         'schedule':crontab(minute="40",hour='5'),
         'args':(),
     },
+    u'定时更新确认妈妈订单佣金提成':{
+        'task':'flashsale.xiaolumm.tasks.task_Push_Pending_OrderRebeta_Cash',
+        'schedule':crontab(minute="0",hour="4"),#
+        'args':()
+    },
     u'定时统计每日特卖综合数据':{
         'task':'flashsale.daystats.tasks.task_Calc_Sales_Stat_By_Day',
         'schedule':crontab(minute="40",hour='2'),
@@ -242,6 +247,7 @@ SHOP_APP_SCHEDULE = {
         'schedule':crontab(minute="0",hour="4", day_of_month='1'),#
         'args':()
     },
+    
 #    'runs-every-10-minutes-update-seller-flag':{
 #        'task':'shopapp.memorule.tasks.updateTradeSellerFlagTask',
 #        'schedule':crontab(minute="*/10"),
