@@ -1,3 +1,6 @@
+########### 2015-6-4 #################
+
+alter table flashsale_tongji_shopping add column status int(11) NOT NULL;
 ########### 2015-6-3 #################
 ALTER TABLE suplychain_flashsale_orderlist  MODIFY COLUMN updated datetime;
 ALTER TABLE suplychain_flashsale_orderdetail  MODIFY COLUMN created datetime;
